--- a/style.css
+++ b/style.css
@@ -134,15 +134,16 @@ body {
     transition: all .3s ease-out;
     transform-origin: 50% 0;
     position: relative;
+    will-change: padding;
 }
 
 .wrapper .images .image__container:hover {
     transform: scale(1.3);
-    padding: 0 0.9rem;
+    padding: 0 1.1vw;
 }
 
 .wrapper .images .image__container:nth-child(4n):hover {
-    padding: 0 1.9rem;
+    padding: 0 2.2vw;
 }
 
 .wrapper .images .image__container:nth-child(1) {
