--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ body {
     display: flex;
     gap: 0.5rem;
     align-items: center;
+    will-change: transform;
 }
 
 .wrapper .images .image__container {
